Code review adjustments

--- a/frontend/customer/src/app/landing/wedding/wedding-page.html
+++ b/frontend/customer/src/app/landing/wedding/wedding-page.html
@@ -18,7 +18,7 @@
 	</p>
 
 	<div class="contact-wrapper">
-		<a class="contact-button" routerLink="/contact">Schreiben Sie uns!</a>
+		<p-button label="Schreiben Sie uns!" routerLink="/contact" />
 	</div>
 
 	<div class="images-container">
