--- a/frontend/customer/src/app/landing/tradition/tradition-page.html
+++ b/frontend/customer/src/app/landing/tradition/tradition-page.html
@@ -22,7 +22,7 @@
 	</ul>
 
 	<div class="contact-wrapper">
-		<a class="contact-button" routerLink="/contact">Schreiben Sie uns!</a>
+		<p-button label="Schreiben Sie uns!" routerLink="/contact" />
 	</div>
 
 	<div class="images-container">
