Scroll to contact form when crab is clicked

--- a/frontend/customer/src/app/crab-helper/crab-helper.html
+++ b/frontend/customer/src/app/crab-helper/crab-helper.html
@@ -1,4 +1,4 @@
-<div class="layout">
+<div class="layout" (click)="clicked.emit()">
 	<div class="speech-bubble">
 		<span class="greeting">Hallo!</span>
 		Ich helfe dir gerne weiter, falls du eine Frage hast!
