--- a/frontend/customer/src/app/home/home-page.scss
+++ b/frontend/customer/src/app/home/home-page.scss
@@ -7,6 +7,7 @@ section {
 
 		h1 {
 			margin-top: 0;
+			text-align: center;
 			transition: opacity 0.2s;
 
 			&:hover {
@@ -17,6 +18,7 @@ section {
 
 	> h1 {
 		margin-top: 0;
+		text-align: center;
 	}
 }
 
