--- a/frontend/customer/src/app/patterns/pattern-detail-page/pattern-detail-page.html
+++ b/frontend/customer/src/app/patterns/pattern-detail-page/pattern-detail-page.html
@@ -23,6 +23,8 @@
 							[alt]="pattern.name"
 							[preview]="true"
 							width="100%"
+							height="100%"
+							[imageStyle]="{ 'object-fit': 'contain' }"
 							appendTo="body"
 						/>
 					</div>
@@ -99,6 +101,13 @@
 						</div>
 					</div>
 				}
+
+				<p-divider />
+
+				<div class="producer-info">
+					<p><strong>Hersteller</strong>: Jenny Michel, Weststr. 23 ½, 84416 Taufkirchen (Vils)</p>
+					<p><strong>E-Mail</strong>: <a href="mailto:info@kicherkrabbe.com">info&#64;kicherkrabbe.com</a></p>
+				</div>
 
 				<p-divider />
 
