--- a/frontend/customer/src/styles.scss
+++ b/frontend/customer/src/styles.scss
@@ -162,3 +162,12 @@ h1 {
 	}
 }
 
+.description .ql-container {
+	font-family: inherit;
+	font-size: inherit;
+}
+
+.description .ql-editor {
+	padding: 0;
+}
+
