--- a/frontend/customer/src/app/home/home-page.html
+++ b/frontend/customer/src/app/home/home-page.html
@@ -50,7 +50,7 @@
 			</p>
 		</div>
 		<div class="about-me-image">
-			<img src="/images/jenny.jpg" width="100%" alt="Jenny" />
+			<img src="/images/jenny.jpg" width="100%" alt="Jenny" loading="lazy" />
 		</div>
 	</div>
 </section>
