--- a/frontend/customer/src/app/landing/tradition/tradition-page.html
+++ b/frontend/customer/src/app/landing/tradition/tradition-page.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class="images-container">
-		<img class="image" src="/assets/images/landing/tradition/example1.jpg" alt="Kind in Lederhose" />
-		<img class="image" src="/assets/images/landing/tradition/example2.jpg" alt="Kind im Dirndl" />
+		<img class="image" src="/assets/images/landing/tradition/example1.jpg" alt="Kind in Lederhose" loading="lazy" />
+		<img class="image" src="/assets/images/landing/tradition/example2.jpg" alt="Kind im Dirndl" loading="lazy" />
 	</div>
 </div>
