--- a/frontend/customer/src/app/landing/wedding/wedding-page.html
+++ b/frontend/customer/src/app/landing/wedding/wedding-page.html
@@ -22,7 +22,7 @@
 	</div>
 
 	<div class="images-container">
-		<img class="image" src="/assets/images/landing/wedding/example1.jpg" alt="Kind im Kleid" />
-		<img class="image" src="/assets/images/landing/wedding/example2.jpg" alt="Kind im Dirndl" />
+		<img class="image" src="/assets/images/landing/wedding/example1.jpg" alt="Kind im Kleid" loading="lazy" />
+		<img class="image" src="/assets/images/landing/wedding/example2.jpg" alt="Kind im Dirndl" loading="lazy" />
 	</div>
 </div>
