--- a/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
+++ b/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
@@ -1,6 +1,6 @@
 <p-card styleClass="product-card" (click)="navigateToDetails()">
 	<ng-template #header>
-		<img alt="Schnittmuster" class="pattern-image" [src]="imageUrl$ | async" />
+		<img alt="Schnittmuster" class="pattern-image" [src]="imageUrl$ | async" loading="lazy" />
 	</ng-template>
 	<ng-template #title>
 		{{ pattern.name }}
