--- a/frontend/customer/src/app/crab-helper/crab-helper.html
+++ b/frontend/customer/src/app/crab-helper/crab-helper.html
@@ -5,6 +5,6 @@
 	</div>
 
 	<div class="crab">
-		<img src="images/logo.svg" width="100%" loading="lazy" />
+		<img src="images/logo.svg" alt="Kicherkrabbe Logo" width="100%" loading="lazy" />
 	</div>
 </div>
