--- a/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
+++ b/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
@@ -4,14 +4,7 @@
 			<p-progressspinner strokeWidth="4" />
 		</div>
 	} @else if (fabricData$ | async; as data) {
-		<div class="back-nav">
-			<p-button
-				icon="pi pi-arrow-left"
-				label="Zurück zu Stoffe"
-				[text]="true"
-				(click)="goBack()"
-			/>
-		</div>
+		<app-breadcrumbs [items]="(breadcrumbs$ | async) ?? []" />
 
 		<div class="content-grid">
 			<div class="image-section">
