--- a/frontend/customer/src/app/shared/breadcrumbs/breadcrumbs.html
+++ b/frontend/customer/src/app/shared/breadcrumbs/breadcrumbs.html
@@ -1,16 +1,1 @@
-<nav class="breadcrumbs" aria-label="Breadcrumb">
-	<ol>
-		@for (item of items; track item.label; let last = $last) {
-			<li>
-				@if (item.url && !last) {
-					<a [routerLink]="item.url">{{ item.label }}</a>
-				} @else {
-					<span [attr.aria-current]="last ? 'page' : null">{{ item.label }}</span>
-				}
-				@if (!last) {
-					<span class="separator" aria-hidden="true">›</span>
-				}
-			</li>
-		}
-	</ol>
-</nav>
+<p-breadcrumb [model]="menuItems" [home]="home" />
