--- a/frontend/customer/src/app/badges/badges.html
+++ b/frontend/customer/src/app/badges/badges.html
@@ -1,7 +1,9 @@
 <div class="badges-container">
 	@for (badge of badges; track badge.title) {
 		<div class="badge">
-			<div class="badge-icon">{{ badge.icon }}</div>
+			<div class="badge-icon">
+				<i class="pi {{ badge.icon }}"></i>
+			</div>
 			<div class="badge-title">{{ badge.title }}</div>
 		</div>
 	}
