Disabling hover effects for devices that do not support hover

--- a/frontend/customer/src/app/fabrics/fabric-card/fabric-card.scss
+++ b/frontend/customer/src/app/fabrics/fabric-card/fabric-card.scss
@@ -2,8 +2,10 @@
 	display: block;
 	width: 100%;
 
-	&:hover {
-		opacity: 0.9;
+	@media (hover: hover) {
+		&:hover {
+			opacity: 0.9;
+		}
 	}
 }
 
