--- a/frontend/customer/src/app/fabrics/fabric-card/fabric-card.scss
+++ b/frontend/customer/src/app/fabrics/fabric-card/fabric-card.scss
@@ -9,9 +9,13 @@
 	}
 }
 
-.fabric-image {
+.fabric-image-container {
+	position: relative;
 	width: 100%;
 	aspect-ratio: 1;
+}
+
+.fabric-image {
 	border-radius: 8px 8px 0 0;
 	object-fit: cover;
 }
