--- a/frontend/customer/src/app/patterns/pattern-card/pattern-card.scss
+++ b/frontend/customer/src/app/patterns/pattern-card/pattern-card.scss
@@ -9,9 +9,13 @@
 	}
 }
 
-.pattern-image {
+.pattern-image-container {
+	position: relative;
 	width: 100%;
 	aspect-ratio: 1;
+}
+
+.pattern-image {
 	border-radius: 8px 8px 0 0;
 	object-fit: cover;
 }
