--- a/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
+++ b/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
@@ -8,13 +8,29 @@
 
 		<div class="content-grid">
 			<div class="image-section">
-				<p-image
-					[src]="getImageUrl(data.fabric.imageId)"
-					[previewImageSrc]="getOriginalImageUrl(data.fabric.imageId)"
-					[alt]="data.fabric.name"
-					[preview]="true"
-					width="100%"
-					appendTo="body"
+				@if (showTiled$ | async) {
+					<div
+						class="tiled-preview"
+						[style.background-image]="'url(' + getImageUrl(data.fabric.imageId) + ')'"
+					></div>
+				} @else {
+					<p-image
+						[src]="getImageUrl(data.fabric.imageId)"
+						[previewImageSrc]="getOriginalImageUrl(data.fabric.imageId)"
+						[alt]="data.fabric.name"
+						[preview]="true"
+						width="100%"
+						appendTo="body"
+					/>
+				}
+				<p-togglebutton
+					[ngModel]="showTiled$ | async"
+					(ngModelChange)="showTiled$.next($event)"
+					onLabel="Einzelansicht"
+					offLabel="Gekachelt anzeigen"
+					onIcon="pi pi-image"
+					offIcon="pi pi-th-large"
+					styleClass="tiled-toggle"
 				/>
 			</div>
 
