--- a/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.scss
+++ b/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.scss
@@ -25,8 +25,24 @@
 	position: sticky;
 	top: 100px;
 	height: fit-content;
-	border-radius: 8px;
-	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+
+	::ng-deep p-image img {
+		border-radius: 8px;
+	}
+
+	.tiled-preview {
+		aspect-ratio: 1;
+		background-repeat: repeat;
+		background-size: 33.33%;
+		border-radius: 8px;
+	}
+
+	::ng-deep .tiled-toggle {
+		width: 100%;
+	}
 }
 
 .details-section {
