--- a/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
+++ b/frontend/customer/src/app/fabrics/fabric-detail-page/fabric-detail-page.html
@@ -4,7 +4,7 @@
 		<div class="loading-container">
 			<p-progressspinner strokeWidth="4" />
 		</div>
-	} @else if (state.data; as data) {
+	} @else if (state?.data; as data) {
 		<app-breadcrumbs [items]="(breadcrumbs$ | async) ?? []" />
 
 		<div class="content-grid">
