Fixed reload on pattern navigation

--- a/frontend/customer/src/app/fabrics/fabric-card/fabric-card.html
+++ b/frontend/customer/src/app/fabrics/fabric-card/fabric-card.html
@@ -1,4 +1,4 @@
-<p-card styleClass="product-card" (click)="navigateToDetails()">
+<p-card styleClass="product-card">
 	<ng-template #header>
 		<div class="fabric-image-container">
 			<img
