--- a/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
+++ b/frontend/customer/src/app/patterns/pattern-card/pattern-card.html
@@ -1,4 +1,4 @@
-<p-card styleClass="product-card" (click)="navigateToDetails()">
+<p-card styleClass="product-card">
 	<ng-template #header>
 		<div class="pattern-image-container">
 			@if (imageId) {
